--- a/pfds-haskell.cabal
+++ b/pfds-haskell.cabal
@@ -57,6 +57,7 @@ test-suite pfds-haskell-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      HeapSpec
       StackSpec
       TreeSpec
       UnbalancedMapSpec
