--- a/pfds-haskell.cabal
+++ b/pfds-haskell.cabal
@@ -59,6 +59,7 @@ test-suite pfds-haskell-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      BinomialHeapSpec
       HeapSpec
       StackSpec
       TreeSpec
