exericse 3.9まで終わり

--- a/pfds-haskell.cabal
+++ b/pfds-haskell.cabal
@@ -63,6 +63,7 @@ test-suite pfds-haskell-test
   other-modules:
       BinomialHeapSpec
       HeapSpec
+      RBTreeSpec
       StackSpec
       TreeSpec
       UnbalancedMapSpec
